# game

./: Cargo.toml
assets/materials/: base.toml
assets/shaders/: my_material.frag
assets/shaders/BlackBody/: BlackBody.frag  BlackBody.vert
assets/shaders/MyMaterial/: MyMaterial.frag  MyMaterial.vert
assets/shaders/PathTracer/: PathTracer.frag  PathTracer.vert
assets/shaders/lib/: color.glsl  constants.glsl  easing.glsl  lib.glsl  marching_cubes.glsl  materials.glsl  math.glsl  noise.glsl  path_trace.glsl  projections.glsl  quaternion.glsl  ray.glsl  rotate.glsl  screenspace.glsl  structs.glsl  uniforms.glsl
assets/shaders/lib/pathtrace/: lib.glsl  output.glsl  preview.glsl  tiled.glsl  tonemap.glsl
assets/shaders/lib/pathtrace/common/: anyhit.glsl  closest_hit.glsl  disney.glsl  globals.glsl  intersection.glsl  lambert.glsl  pathtrace.glsl  sampling.glsl  uniforms.glsl  vertex.glsl
assets/shaders/my_material/: my_material.frag
src/: bsp.rs  camera.rs  chunks.rs  constants.rs  easing.rs  input.rs  main.rs  noise.rs  path_tracer.rs  pbr.rs  physics.rs  projections.rs  state.rs  window.rs
src/procedual/: mod.rs  solar_system.rs
src/shaders/: loader.rs  mod.rs  my_material.frag  my_material.vert
src/utils/: reflection.rs
