[package]
name = "game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevycheck = "0.1"
bevy_mod_bounding = "0.1"
bevy_frustum_culling = { git="https://github.com/aevyrie/bevy_frustum_culling.git", branch="master" }
futures-lite = "1.12"
serde = "1.0"
toml = "0.5"
rayon = "1.5"
num_cpus = "1.13"
bevy_rng = { git="https://github.com/dylanrenwick/bevy_rng", branch="main" }
bevy_world_to_screenspace = { git="https://github.com/aevyrie/bevy_world_to_screenspace.git", branch="master" }
bevy_rapier3d = { version = "*", features = [ "simd-stable" ] }
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1